
define([AC_CACHE_LOAD], )dnl
define([AC_CACHE_SAVE], )dnl

AC_INIT(Base/OSGBase.h)

AC_PREREQ(1.3)

dnl ############# Default Settings #####################

if test $srcdir = .; then
	ac_gdz_src_dir=`pwd`
	ac_gdz_lib_src_dir=`pwd`
elif test $srcdir = ..; then
    ac_gdz_src_dir=`pwd`/..
    ac_gdz_lib_src_dir=`pwd`/..
else
	ac_gdz_src_dir=$srcdir
	ac_gdz_lib_src_dir=$srcdir
fi

ac_gdz_common_dir=$ac_gdz_src_dir/Common
ac_gdz_commonconf_dir=CommonConf
ac_gdz_so_praefix=
ac_gdz_so_suffix=
ac_gdz_lib_suffix=
ac_gdz_obj_suffix=
ac_gdz_exe_suffix=
ac_gdz_common_patterns=$ac_gdz_commonconf_dir/common.pattern.in
ac_gdz_build_dir=`pwd`
ac_gdz_compiler_exe=
ac_gdz_conf_package_defs=
ac_gdz_conf_package_qt='0'
ac_gdz_conf_package_qt_e1='0'
ac_gdz_conf_package_glut='0'
ac_gdz_conf_package_glut_e1='0'
ac_gdz_conf_package_tif='0'
ac_gdz_conf_package_tif_e1='0'
ac_gdz_conf_package_jpg='0'
ac_gdz_conf_package_jpg_e1='0'
ac_gdz_conf_package_png='0'
ac_gdz_conf_package_png_e1='0'
ac_gdz_conf_package_mng='0'
ac_gdz_conf_package_mng_e1='0'
ac_gdz_conf_package_gif='0'
ac_gdz_conf_package_gif_e1='0'
ac_gdz_conf_package_efence='0'
ac_gdz_conf_package_efence_e1='0'
ac_gdz_conf_package_mpatrol='0'
ac_gdz_conf_package_mpatrol_e1='0'
ac_gdz_conf_package_myrinet='0'
ac_gdz_conf_package_myrinet_e1='0'
ac_gdz_conf_package_freetype1='0'
ac_gdz_conf_package_freetype1_e1='0'

ac_gdz_with_add_incdirs=
ac_gdz_with_add_libdirs=
ac_gdz_with_add_libs=

ac_gdz_mpatrol_inc_dir_e1=
ac_gdz_mpatrol_lib_dir_e1=
ac_gdz_mpatrol_libs_e1=

ac_gdz_test_debug_libs=

AC_CONFIG_AUX_DIR($ac_gdz_commonconf_dir) 

dnl ############# Compiler Settings #####################

AC_ARG_WITH(compiler,[  --with-compiler=<compiler> choose one of the following\
 compilers
        IRIX    : CC
        Windows : icl (==50), icl45, icl50, icl60
        Linux   : g++,icc,g++3],
        echo Compiler : $with_compiler;ac_gdz_compiler=$with_compiler;) 

dnl ############# SUFFIX Settings #####################

AC_ARG_WITH(suffix,     [  --with-suffix=SUFFIX               add suffix to build dir],
			,with_suffix=no) 

if test "$with_suffix" = yes; then
	ac_gdz_suffix=
elif test "$with_suffix" = no; then
	ac_gdz_suffix=
elif test "X$with_suffix" = X; then
	ac_gdz_suffix=
else
	ac_gdz_suffix=-$with_suffix
fi

dnl ############# STL Settings #####################

AC_ARG_WITH(stl,     [  --with-stl=DIR                     Where to find the stl to use],
			,with_stl=no) 

if test "$with_stl" = yes; then
	ac_gdz_stl_dir=
elif test "$with_stl" = no; then
	ac_gdz_stl_dir=
else
	ac_gdz_stl_dir=$with_stl
fi

dnl ############# GL Settings #####################

AC_ARG_WITH(gl,     [  --with-gl=DIR                    Use gl, if DIR is given use the file from the give directory],
			,with_gl=yes) 

if test "$with_gl" = yes; then
	ac_gdz_gl_dir=yes
	ac_gdz_conf_package_gl='1'
	ac_gdz_conf_package_gl_e1='1'
elif test "$with_gl" = no; then
	ac_gdz_gl_dir=
else
	ac_gdz_gl_dir=$with_gl
	ac_gdz_conf_package_gl='1'
	ac_gdz_conf_package_gl_e1='1'
fi


dnl ############# GLUT Settings #####################

AC_ARG_WITH(glut,     [  --with-glut=DIR                    Use glut, if DIR is given use the file from the give directory],
			,with_glut=no) 

if test "$with_glut" = yes; then
	ac_gdz_glut_dir=yes
	ac_gdz_conf_package_defs=-DOSG_WITH_GLUT
	ac_gdz_conf_package_glut='1'
	ac_gdz_conf_package_glut_e1='1'
elif test "$with_glut" = no; then
	ac_gdz_glut_dir=
else
	ac_gdz_glut_dir=$with_glut
	ac_gdz_conf_package_defs=-DOSG_WITH_GLUT
	ac_gdz_conf_package_glut='1'
	ac_gdz_conf_package_glut_e1='1'
fi

dnl ############# QT Settings #####################

AC_ARG_WITH(qt,     [  --with-qt=DIR                      Use qt, if DIR is given use the file from the give directory],
			,with_qt=no) 

if test "$with_qt" = yes; then
	ac_gdz_qt_dir=
	ac_gdz_conf_package_defs=$ac_gdz_conf_package_defs' -DOSG_WITH_QT'
	ac_gdz_conf_package_qt='1'
	ac_gdz_conf_package_qt_e1='1'
elif test "$with_qt" = no; then
	ac_gdz_qt_dir=
else
	ac_gdz_qt_dir=$with_qt
	ac_gdz_conf_package_qt='1'
	ac_gdz_conf_package_qt_e1='1'
	ac_gdz_conf_package_defs=$ac_gdz_conf_package_defs' -DOSG_WITH_QT'
fi

dnl ############# TIF Settings #####################

AC_ARG_WITH(tif,     [  --with-tif=DIR                     Use tif lib, if DIR is given use the file from the give directory],
			,with_tif=no) 

if test "$with_tif" = yes; then
	ac_gdz_tif_dir=
	ac_gdz_conf_package_defs=$ac_gdz_conf_package_defs' -DOSG_WITH_TIF'
	ac_gdz_conf_package_tif='1'
	ac_gdz_conf_package_tif_e1='1'
elif test "$with_tif" = no; then
	ac_gdz_tif_dir=
else
	ac_gdz_tif_dir=$with_tif
	ac_gdz_conf_package_tif='1'
	ac_gdz_conf_package_tif_e1='1'
	ac_gdz_conf_package_defs=$ac_gdz_conf_package_defs' -DOSG_WITH_TIF'
fi

dnl ############# JPG Settings #####################

AC_ARG_WITH(jpg,     [  --with-jpg=DIR                     Use jpg lib, if DIR is given use the file from the give directory],
			,with_jpg=no) 

if test "$with_jpg" = yes; then
	ac_gdz_jpg_dir=
	ac_gdz_conf_package_defs=$ac_gdz_conf_package_defs' -DOSG_WITH_JPG'
	ac_gdz_conf_package_jpg='1'
	ac_gdz_conf_package_jpg_e1='1'
elif test "$with_jpg" = no; then
	ac_gdz_jpg_dir=
else
	ac_gdz_jpg_dir=$with_jpg
	ac_gdz_conf_package_jpg='1'
	ac_gdz_conf_package_jpg_e1='1'
	ac_gdz_conf_package_defs=$ac_gdz_conf_package_defs' -DOSG_WITH_JPG'
fi

dnl ############# PNG Settings #####################

AC_ARG_WITH(png,     [  --with-png=DIR                     Use png lib, if DIR is given use the file from the give directory],
			,with_png=no) 

if test "$with_png" = yes; then
	ac_gdz_png_dir=
	ac_gdz_conf_package_defs=$ac_gdz_conf_package_defs' -DOSG_WITH_PNG'
	ac_gdz_conf_package_png='1'
	ac_gdz_conf_package_png_e1='1'
elif test "$with_png" = no; then
	ac_gdz_png_dir=
else
	ac_gdz_png_dir=$with_png
	ac_gdz_conf_package_png='1'
	ac_gdz_conf_package_png_e1='1'
	ac_gdz_conf_package_defs=$ac_gdz_conf_package_defs' -DOSG_WITH_PNG'
fi


dnl ############# MNG Settings #####################

AC_ARG_WITH(mng,     [  --with-mng=DIR                     Use mng lib, if DIR is given use the file from the give directory],
			,with_mng=no) 

if test "$with_mng" = yes; then
	ac_gdz_mng_dir=
	ac_gdz_conf_package_defs=$ac_gdz_conf_package_defs' -DOSG_WITH_MNG'
	ac_gdz_conf_package_mng='1'
	ac_gdz_conf_package_mng_e1='1'
elif test "$with_mng" = no; then
	ac_gdz_mng_dir=
else
	ac_gdz_mng_dir=$with_mng
	ac_gdz_conf_package_mng='1'
	ac_gdz_conf_package_mng_e1='1'
	ac_gdz_conf_package_defs=$ac_gdz_conf_package_defs' -DOSG_WITH_MNG'
fi

dnl ############# GIF Settings #####################

AC_ARG_WITH(gif,     [  --with-gif                         Include gif image support],
			,with_gif=no) 

if test "$with_gif" = yes; then
	ac_gdz_gif_dir=
	ac_gdz_conf_package_defs=$ac_gdz_conf_package_defs' -DOSG_WITH_GIF'
	ac_gdz_conf_package_gif='1'
	ac_gdz_conf_package_gif_e1='1'
elif test "$with_gif" = no; then
	ac_gdz_gif_dir=
else
	ac_gdz_gif_dir=
	ac_gdz_conf_package_gif='1'
	ac_gdz_conf_package_gif_e1='1'
	ac_gdz_conf_package_defs=$ac_gdz_conf_package_defs' -DOSG_WITH_GIF'
fi

dnl ############# efence Settings #####################

AC_ARG_WITH(efence,     [  --with-efence=DIR                  Use efence lib, if DIR is given use the file from the give directory],
			,with_efence=no) 

if test "$with_efence" = yes; then
	ac_gdz_efence_dir=
	ac_gdz_conf_package_efence='1'
	ac_gdz_conf_package_efence_e1='1'
elif test "$with_efence" = no; then
	ac_gdz_efence_dir=
else
	ac_gdz_efence_dir=$with_efence
	ac_gdz_conf_package_efence='1'
	ac_gdz_conf_package_efence_e1='1'
	ac_gdz_conf_package_defs=$ac_gdz_conf_package_defs
fi

dnl ############# mpatrol Settings #####################

AC_ARG_WITH(mpatrol,     [  --with-mpatrol=DIR                  Use mpatrol lib, if DIR is given use the file from the give directory],
			,with_mpatrol=no) 

if test "$with_mpatrol" = yes; then
	ac_gdz_mpatrol_dir=
	ac_gdz_conf_package_mpatrol'1'
	ac_gdz_conf_package_mpatrol_e1='1'
elif test "$with_mpatrol" = no; then
	ac_gdz_mpatrol_dir=
else
	ac_gdz_mpatrol_dir=$with_mpatrol
	ac_gdz_conf_package_mpatrol='1'
	ac_gdz_conf_package_mpatrol_e1='1'
	ac_gdz_conf_package_defs=$ac_gdz_conf_package_defs
fi


dnl ############# Myrinet Settings #####################

AC_ARG_WITH(myrinet,   [  --with-myrinet=DIR                 Use Myrinet lib, if DIR is given use the file from the give directory],
			,with_myrinet=no) 

if test "$with_myrinet" = yes; then
	ac_gdz_myrinet_dir=
	ac_gdz_conf_package_defs=$ac_gdz_conf_package_defs' -DOSG_WITH_MYRINET'
	ac_gdz_conf_package_myrinet='1'
	ac_gdz_conf_package_myrinet_e1='1'
elif test "$with_myrinet" = no; then
	ac_gdz_myrinet_dir=
else
	ac_gdz_myrinet_dir=$with_myrinet
	ac_gdz_conf_package_myrinet='1'
	ac_gdz_conf_package_myrinet_e1='1'
	ac_gdz_conf_package_defs=$ac_gdz_conf_package_defs' -DOSG_WITH_MYRINET'
fi

dnl ############# Freetype1 Settings #####################

AC_ARG_WITH(freetype1,   [  --with-freetype1=DIR                 Use Freetype1 lib, if DIR is given use the file from the give directory],
			,with_freetype1=no) 

if test "$with_freetype1" = yes; then
	ac_gdz_freetype1_dir=
	ac_gdz_conf_package_defs=$ac_gdz_conf_package_defs' -DOSG_WITH_FREETYPE1'
	ac_gdz_conf_package_freetype1='1'
	ac_gdz_conf_package_freetype1_e1='1'
elif test "$with_freetype1" = no; then
	ac_gdz_freetype1_dir=
else
	ac_gdz_freetype1_dir=$with_freetype1
	ac_gdz_conf_package_freetype1='1'
	ac_gdz_conf_package_freetype1_e1='1'
	ac_gdz_conf_package_defs=$ac_gdz_conf_package_defs' -DOSG_WITH_FREETYPE1'
fi


dnl ############# loglevel Settings #####################

AC_ARG_WITH(log_level,     [  --with-log_level=LEVEL             Sets the default log level LEVEL (LOG, FATAL, WARNING, NOTICE, INFO, DEBUG) ],
			,with_log_level=WARNING) 

dnl ############# loglevel Settings #####################

AC_ARG_WITH(log_type,     [  --with-log_type=TYPE               Sets the default log level TYPE (NONE, STDOUT, STDERR) ],
			,with_log_type=STDERR) 

dnl ############# TLS Settings #####################

AC_ARG_ENABLE(win-localstorage,     [  --enable-win-localstorage          Use local storage instead of __declspec to get thread local storage on windows],
			,enable_win_localstorage=no) 

dnl ############# XTREE Settings #####################

AC_ARG_ENABLE(fixed-xtree,     [  --enable-fixed-xtree               Use fixed xtree header ],
			,enable_fixed_xtree=no) 

dnl ############# Bool=unsigned int Settings #####################

AC_ARG_ENABLE(win-bool-is-unsigned,     [  --enable-win-bool-is-unsigned      Define Bool as unsigned, required to combine the software with Microsoft stuff, since preprocessors ignore namespaces ],
			,enable_win_bool_is_unsigned=no) 

dnl ############# TLS Settings #####################

AC_ARG_ENABLE(sgi-pthread,     [  --enable-sgi-pthread               Use pthreads instead of sproc on sgi plattforms],
			,enable_sgi_pthread=no) 

dnl ############# Fullwarn Settings #####################

AC_ARG_ENABLE(compiler-pedantic-errors,     [  --enable-compiler-pedantic-errors  Sets the compiler to generate more errors. WARNING, some external software (e.g. QT or STL) may require some patches to work with these settings ],
			,enable_compiler_pedantic_errors=no) 


dnl ############# CP Settings #####################

AC_ARG_ENABLE(compiler-path,     [  --enable-compiler-path             Reference compiler with path],
			,enable_compiler_path=no) 

dnl ############# CP Settings #####################

AC_ARG_ENABLE(gv-beta,     [  --enable-gv-beta                   enable gv beta],
			,enable_gv_beta=no) 

if test $enable_gv_beta = yes; then
	ac_gdz_conf_gvbeta_e1=1
else
	ac_gdz_conf_gvbeta_e1=0
fi

dnl ############# Add Path Settings #####################

AC_ARG_WITH(add-incdir,   [  --with-add-incdir=DIR{:DIR}*       use additional include directory, right now only one dir works],
			,with_add_incdir=no) 

if test "$with_add_incdir" = yes; then
	ac_gdz_with_add_incdirs=
elif test "$with_add_incdir" = no; then
	ac_gdz_with_add_incdirs=
else
	ac_gdz_with_add_incdirs=$with_add_incdir 
fi

AC_ARG_WITH(add-libdir,   [  --with-add-libdir=DIR{:DIR}*       use additional library directory, right now only one dir works],
			,with_add_libdir=no) 

if test "$with_add_libdir" = yes; then
	ac_gdz_with_add_libdirs=
elif test "$with_add_libdir" = no; then
	ac_gdz_with_add_libdirs=
else
	ac_gdz_with_add_libdirs=$with_add_libdir 
fi

AC_ARG_WITH(add-lib,   [  --with-add-lib=LIB{:LIB}*          use additional library (use foo not libfoo.so), right now only one lib works],
			,with_add_lib=no) 

if test "$with_add_lib" = yes; then
	ac_gdz_with_add_libs=
elif test "$with_add_lib" = no; then
	ac_gdz_with_add_libs=
else
	ac_gdz_with_add_libs=$with_add_lib 
fi

dnl ############# Helper #####################

sinclude(./acinclude.m4)

FK_GDZ_CREATE_PACKAGE_DIRS ()
{
    ac_gdz_package_dir_build=${1}Lib
    ac_gdz_package_dir_test=${1}Test

    if ! test -w $ac_gdz_package_dir_build; then 
        echo Need $ac_gdz_package_dir_build
	    mkdir $ac_gdz_package_dir_build
    fi

    if ! test -w $ac_gdz_package_dir_build/obj-dbg; then 
	    echo Need $ac_gdz_package_dir_build/obj-dbg
	    mkdir $ac_gdz_package_dir_build/obj-dbg
    fi

    if ! test -w $ac_gdz_package_dir_build/obj-opt; then 
	   	echo Need $ac_gdz_package_dir_build/obj-opt
	    mkdir $ac_gdz_package_dir_build/obj-opt
    fi

    if ! test -w $ac_gdz_package_dir_build/lib-dbg; then 
	  	echo Need $ac_gdz_package_dir_build/lib-dbg
	    mkdir $ac_gdz_package_dir_build/lib-dbg
    fi

    if ! test -w $ac_gdz_package_dir_build/lib-opt; then 
	   	echo Need $ac_gdz_package_dir_build/lib-opt
	    mkdir $ac_gdz_package_dir_build/lib-opt
    fi


    if ! test -w $ac_gdz_package_dir_build/obj-dbglnk; then 
	    echo Need $ac_gdz_package_dir_build/obj-dbglnk
	    mkdir $ac_gdz_package_dir_build/obj-dbglnk
    fi

    if ! test -w $ac_gdz_package_dir_build/obj-optlnk; then 
	   	echo Need $ac_gdz_package_dir_build/obj-optlnk
	    mkdir $ac_gdz_package_dir_build/obj-optlnk
    fi

    if ! test -w $ac_gdz_package_dir_build/lib-dbglnk; then 
	  	echo Need $ac_gdz_package_dir_build/lib-dbglnk
	    mkdir $ac_gdz_package_dir_build/lib-dbglnk
    fi

    if ! test -w $ac_gdz_package_dir_build/lib-optlnk; then 
	   	echo Need $ac_gdz_package_dir_build/lib-optlnk
	    mkdir $ac_gdz_package_dir_build/lib-optlnk
    fi


    if ! test -w $ac_gdz_package_dir_test; then 
        echo Need $ac_gdz_package_dir_test
	    mkdir $ac_gdz_package_dir_test
    fi

    if ! test -w $ac_gdz_package_dir_test/obj-dbg; then 
	   	echo Need $ac_gdz_package_dir_test/obj-dbg
	    mkdir $ac_gdz_package_dir_test/obj-dbg
    fi

    if ! test -w $ac_gdz_package_dir_test/obj-opt; then 
	   	echo Need $ac_gdz_package_dir_test/obj-opt
	    mkdir $ac_gdz_package_dir_test/obj-opt
    fi

    if ! test -w $ac_gdz_package_dir_test/exe-dbg; then 
	   	echo Need $ac_gdz_package_dir_test/exe-dbg
	    mkdir $ac_gdz_package_dir_test/exe-dbg
    fi

    if ! test -w $ac_gdz_package_dir_test/exe-opt; then 
	   	echo Need $ac_gdz_package_dir_test/exe-opt
	    mkdir $ac_gdz_package_dir_test/exe-opt
    fi

    if ! test -w $ac_gdz_package_dir_test/obj-optlnk; then 
	   	echo Need $ac_gdz_package_dir_test/obj-optlnk
	    mkdir $ac_gdz_package_dir_test/obj-optlnk
    fi

    if ! test -w $ac_gdz_package_dir_test/obj-dbglnk; then 
	   	echo Need $ac_gdz_package_dir_test/obj-dbglnk
	    mkdir $ac_gdz_package_dir_test/obj-dbglnk
    fi

    if ! test -w $ac_gdz_package_dir_test/exe-dbglnk; then 
	   	echo Need $ac_gdz_package_dir_test/exe-dbglnk
	    mkdir $ac_gdz_package_dir_test/exe-dbglnk
    fi

    if ! test -w $ac_gdz_package_dir_test/exe-optlnk; then 
	   	echo Need $ac_gdz_package_dir_test/exe-optlnk
	    mkdir $ac_gdz_package_dir_test/exe-optlnk
    fi
}

dnl ############# Run Tests #####################

AC_CANONICAL_SYSTEM()

case "$build_os" in
    darwin*)
        build_os="darwin"
    ;;
esac

case "$build" in
    powerpc-apple-darwin*)
        build="powerpc-apple-darwin"
    ;;
esac

AC_GDZ_GUESS_COMPILER_DEFAULTS()

ac_gdz_os_base=$build_os
ac_gdz_compiler_base=$ac_gdz_compiler

AC_GDZ_SET_COMPILER_DEFAULTS()

AC_GDZ_EXEEXT()
AC_GDZ_OBJEXT()
AC_GDZ_LIBEXT()
AC_GDZ_SOEXT()
AC_GDZ_SOPRAEFIX()


if test $build_os = cygwin; 
then 
	if test $ac_gdz_compiler_base != g++; then

		AC_GDZ_SET_SYSTEM_DIRS()

	 	    case "$ac_gdz_compiler" in
			    icl*)
					ac_gdz_compiler_exe='"$(CC_PATH)/'$ac_gdz_compiler_exe'" '

					ac_gdz_compiler_exe_shared='"$(CC_PATH)/'$ac_gdz_linker_exe'" -dll -map'

					ac_gdz_compiler_exe_lnk='"$(CC_PATH)/xilink" -lib -NODEFAULTLIB'
					ac_gdz_compiler_exe_exe='"$(CC_PATH)/'$ac_gdz_linker_exe'"'

					ac_gdz_base_system_libs='user32.lib kernel32.lib MSVCPRTD.lib MSVCRTD.lib libmmd.lib'
					ac_gdz_base_system_libs="$ac_gdz_base_system_libs winmm.lib wsock32.lib"
			    ;;
			    cl*)
					ac_gdz_compiler_exe='"$(CC_PATH)/'$ac_gdz_compiler_exe'" '

					ac_gdz_compiler_exe_shared='"$(CC_PATH)/'$ac_gdz_linker_exe'" -dll -map'

					ac_gdz_compiler_exe_lnk='"$(CC_PATH)/link" -lib -NODEFAULTLIB'
					ac_gdz_compiler_exe_exe='"$(CC_PATH)/'$ac_gdz_linker_exe'"'

					ac_gdz_base_system_libs='user32.lib kernel32.lib MSVCPRTD.lib MSVCRTD.lib'
					ac_gdz_base_system_libs="$ac_gdz_base_system_libs winmm.lib wsock32.lib"
			    ;;
	            bcc*)
					ac_gdz_compiler_exe='"$(CC_PATH)/'$ac_gdz_compiler_exe'"'

					ac_gdz_compiler_exe_shared='"$(CC_PATH)/'$ac_gdz_linker_exe'" -WD'

					ac_gdz_compiler_exe_exe='"$(CC_PATH)/'$ac_gdz_linker_exe'"'

					ac_gdz_base_system_libs=
				;;
			esac

		ac_gdz_ln_exe="cp"

		ac_gdz_system_incl_dir_e1=`cygpath -w "$ac_gdz_system_incl_dir"`
		ac_gdz_system_lib_dir_e1=`cygpath -w "$ac_gdz_system_lib_dir"`

		ac_gdz_system_incl_dir_e1='"'$ac_gdz_system_incl_dir_e1'"'
		ac_gdz_system_lib_dir_e1='"'$ac_gdz_system_lib_dir_e1'"'

		ac_gdz_compiler_incl=`cygpath -w "$ac_gdz_compiler_incl"`
		ac_gdz_compiler_lib=`cygpath -w "$ac_gdz_compiler_lib"`

		ac_gdz_compiler_incl='"'$ac_gdz_compiler_incl'"'
		ac_gdz_compiler_lib='"'$ac_gdz_compiler_lib'"'
	else
		ac_gdz_compiler_exe_shared='$(CC) -shared'

		ac_gdz_system_incl_dir_e1=
		ac_gdz_system_lib_dir_e1=

		ac_gdz_base_system_libs='-lm'
	fi

	ac_gdz_flex_exe=flex.exe
	ac_gdz_bison_exe=bison.exe

	ac_gdz_sed_exe=sed

	ac_gdz_gmake_exe=make

else 

    ac_gdz_compiler_exe_ranlib=

    case "$build_os" in

       solaris*)
		ac_gdz_compiler_exe_shared="$CC -shared"
        ;;

       darwin*)
		ac_gdz_compiler_exe_shared='$(CC) -dynamiclib'
        ac_gdz_compiler_exe_ranlib=ranlib
        ;;

        *)
		ac_gdz_compiler_exe_shared='$(CC) -shared'
        ;;

    esac

    ac_gdz_compiler_exe_lnk="ar -cr"

	ac_gdz_flex_exe=flex
	ac_gdz_bison_exe=bison

dnl No linux distribution comes without GNU Make, but not everyone places
dnl a symlink from gmake to make

	if test $build_os = linux-gnu; then
		ac_gdz_gmake_exe=make
	else
		ac_gdz_gmake_exe=gmake
	fi

	ac_gdz_ln_exe="ln -s"

	ac_gdz_sed_exe=sed

	ac_gdz_systen_incl_dir_e1=
	ac_gdz_system_lib_dir_e1=

	ac_gdz_base_system_libs='-lm'

        if test $build_os = linux-gnu; then
		ac_gdz_base_system_libs="-ldl $ac_gdz_base_system_libs"
	fi

    ac_gdz_compiler_exe_exe='$(CC)'

    if test $ac_gdz_conf_package_efence = "1"; then
        if test "x"$ac_gdz_efence_dir = "x" ; then
            ac_gdz_test_debug_libs=' -lefence'
        else
            ac_gdz_test_debug_libs=" -L$ac_gdz_efence_dir -lefence"
        fi
    fi

    if test $build_os = linux-gnu; 
    then 
		ac_gdz_base_system_libs='-lpthread '$ac_gdz_base_system_libs
    fi

    if test "$enable_sgi_pthread" = yes; 
    then 
		ac_gdz_base_system_libs='-lpthread '$ac_gdz_base_system_libs
    fi
fi 

if ! test -w Builds; then 
	echo Need Builds
	mkdir Builds
fi

ac_gdz_lib_base_dir=Builds/$build-$ac_gdz_compiler$ac_gdz_suffix
ac_gdz_commonpackage_dir=$ac_gdz_src_dir/$ac_gdz_lib_base_dir/CommonPackages
ac_gdz_commonbin=$ac_gdz_src_dir/$ac_gdz_lib_base_dir/bin

if ! test -w $ac_gdz_lib_base_dir; then 
	echo Need $ac_gdz_lib_base_dir
	mkdir $ac_gdz_lib_base_dir
    mkdir $ac_gdz_lib_base_dir/CommonPackages
fi

if ! test -w $ac_gdz_lib_base_dir/bin; then
    echo Need $ac_gdz_lib_base_dir/bin
    mkdir $ac_gdz_lib_base_dir/bin
fi

ac_gdz_common_system=$ac_gdz_commonconf_dir/common.$build-$ac_gdz_compiler_base.in

AC_MSG_CHECKING([project config common.project.in])

if test -r "$ac_gdz_commonconf_dir/common.project.in"; then
    AC_MSG_RESULT("yes")
    . "$ac_gdz_commonconf_dir/common.project.in"
else
    AC_MSG_RESULT("error could not find project config")
	exit
fi

AC_MSG_CHECKING([package config common.libs.in])

if test -r "$ac_gdz_commonconf_dir/common.libs.in"; then
    AC_MSG_RESULT("yes")
    . "$ac_gdz_commonconf_dir/common.libs.in"
else
    AC_MSG_RESULT("error could not find package config")
	exit
fi


AC_MSG_CHECKING([additional package configs])

for i in `find . -name common.libs.in | sed -e 's|^./||'` ;
do
    if test "$i" != "$ac_gdz_commonconf_dir/common.libs.in"
    then
        dir=`echo "$i" | sed -e 's|/common.libs.in$||'`
        echo -n " $dir"
        . "$i"
    fi
done
AC_MSG_RESULT("")


ac_gdz_package_sub_dir_out=Builds/$build-$ac_gdz_compiler$ac_gdz_suffix

AC_CONFIG_HEADER($ac_gdz_package_sub_dir_out/Base/OSGConfigured.h:CommonConf/OSGConfigured.h.in)

if test $build_os = cygwin; then 
	if test ! -w $ac_gdz_package_sub_dir_out/Base; then
		mkdir $ac_gdz_package_sub_dir_out/Base
	fi

	if test $ac_gdz_compiler_base = g++; then
		ac_gdz_gen_base_inc_e1="../Base"
	else
		ac_gdz_gen_base_inc_e1="..\\Base"
		touch $ac_gdz_package_sub_dir_out/Base/unistd.h
    fi
else
    ac_gdz_gen_base_inc_e1="../Base"
fi

if test "$with_patrol" = yes; then
    echo "not implemented"
#    if test $build_os = cygwin; then
#ac_gdz_mpatrol_inc_dir_e1=
#ac_gdz_mpatrol_lib_dir_e1=
#ac_gdz_mpatrol_libs_e1=
#     else
#           ac_gdz_freetype1_lib_e14='-lfreetype'
#        fi

elif test -n "$ac_gdz_mpatrol_dir"; then
    if test $build_os = cygwin; then
        ac_gdz_mpatrol_inc_dir_e1='"'`cygpath -w $ac_gdz_mpatrol_dirr/include`'"'
        ac_gdz_mpatrol_lib_dir_e1='"'`cygpath -w $ac_gdz_mpatrol_dir/lib`'"'
        ac_gdz_mpatrol_libs_e1=#'ttf.lib'
    else
        ac_gdz_mpatrol_inc_dir_e1=$ac_gdz_mpatrol_dir/include
        ac_gdz_mpatrol_lib_dir_e1=$ac_gdz_mpatrol_dir/lib
        ac_gdz_mpatrol_libs_e1=#'-lttf'
    fi
fi


ac_gdz_additional_inc_dirs_e1=$ac_gdz_with_add_incdirs
ac_gdz_additional_lib_dirs_e1=$ac_gdz_with_add_libdirs
ac_gdz_additional_libs_e1=$ac_gdz_with_add_libs

AC_GDZ_SCAN_PACKET_DESC()

AC_SUBST(ac_gdz_so_praefix)
AC_SUBST(ac_gdz_so_suffix)
AC_SUBST(ac_gdz_lib_suffix)
AC_SUBST(ac_gdz_obj_suffix)
AC_SUBST(ac_gdz_exe_suffix)
AC_SUBST(ac_gdz_os_base)
AC_SUBST(ac_gdz_compiler_base)

AC_SUBST(ac_gdz_compiler_path)
AC_SUBST(ac_gdz_compiler_exe)
AC_SUBST(ac_gdz_compiler_exe_shared)
AC_SUBST(ac_gdz_compiler_exe_lnk)
AC_SUBST(ac_gdz_compiler_exe_exe)
AC_SUBST(ac_gdz_compiler_exe_ranlib)
AC_SUBST(ac_gdz_flex_exe)
AC_SUBST(ac_gdz_bison_exe)
AC_SUBST(ac_gdz_gmake_exe)
AC_SUBST(ac_gdz_ln_exe)
AC_SUBST(ac_gdz_sed_exe)

AC_SUBST(ac_gdz_system_incl_dir_e1)
AC_SUBST(ac_gdz_system_lib_dir_e1)

AC_SUBST(ac_gdz_additional_inc_dirs_e1)
AC_SUBST(ac_gdz_additional_lib_dirs_e1)
AC_SUBST(ac_gdz_additional_libs_e1)

AC_SUBST(ac_gdz_compiler_incl)
AC_SUBST(ac_gdz_compiler_lib)

AC_SUBST(ac_gdz_base_system_libs)
AC_SUBST(ac_gdz_plat_project_praefix)

AC_SUBST(ac_gdz_gen_base_inc_e1)

AC_SUBST(ac_gdz_conf_package_defs)
AC_SUBST(ac_gdz_conf_package_qt_e1)
AC_SUBST(ac_gdz_conf_package_tif_e1)
AC_SUBST(ac_gdz_conf_package_jpg_e1)
AC_SUBST(ac_gdz_conf_package_png_e1)
AC_SUBST(ac_gdz_conf_package_mng_e1)
AC_SUBST(ac_gdz_conf_package_gif_e1)
AC_SUBST(ac_gdz_conf_package_gl_e1)
AC_SUBST(ac_gdz_conf_package_glut_e1)
AC_SUBST(ac_gdz_conf_package_freetype1_e1)
AC_SUBST(ac_gdz_conf_gvbeta_e1)

AC_SUBST(ac_gdz_mpatrol_inc_dir_e1)
AC_SUBST(ac_gdz_mpatrol_lib_dir_e1)
AC_SUBST(ac_gdz_mpatrol_libs_e1)

AC_SUBST_FILE(ac_gdz_common_patterns)
AC_SUBST_FILE(ac_gdz_common_system)


if test "$enable_compiler_pedantic_errors" = yes; then
    ac_gdz_ped_errors_e1=1
else
    ac_gdz_ped_errors_e1=0    
fi

AC_SUBST(ac_gdz_ped_errors_e1)

ac_gdz_commonpackage_dir_e1=$ac_gdz_commonpackage_dir

AC_SUBST(ac_gdz_commonpackage_dir_e1)

if test "$prefix" = NONE; then
    ac_gdz_install_prefix=/usr/local
elif test "$prefix" = "BUILD"; then
    ac_gdz_install_prefix=$ac_gdz_src_dir/$ac_gdz_lib_base_dir
elif test "$prefix" = ""; then
    ac_gdz_install_prefix=$ac_gdz_src_dir/$ac_gdz_lib_base_dir
else
    prefix_f=${prefix#\/}

    if test $prefix = $prefix_f; then
        echo 'Local Path'
        ac_gdz_install_prefix=$ac_gdz_src_dir/$prefix
    else
        echo 'Abs Path'
        ac_gdz_install_prefix=$prefix
    fi
fi

echo "OSGINSTALLPREFIX=\"$ac_gdz_install_prefix\"" > tutorials/.prefix.$target
echo "OSGINSTALLPREFIX=\"$ac_gdz_install_prefix\"" > examples/SceneViewer/.prefix.$target

ac_gdz_common_platform_in=$ac_gdz_commonconf_dir/common.platform.mk.in
ac_gdz_common_platform=$ac_gdz_common_dir/common.$build-$ac_gdz_compiler$ac_gdz_suffix.mk

ac_gdz_common_packetmake_in=$ac_gdz_commonconf_dir/Makefile.lib.in
ac_gdz_common_buildsmake_in=$ac_gdz_commonconf_dir/Makefile.builds.in
ac_gdz_common_testmake_in=$ac_gdz_commonconf_dir/Makefile.test.in

AC_OUTPUT($ac_gdz_common_platform:$ac_gdz_common_platform_in)

AC_GDZ_WRITE_COMMON_STL()

AC_GDZ_WRITE_COMMON_GLUT()

AC_GDZ_WRITE_COMMON_QT()

AC_GDZ_WRITE_COMMON_TIF()

AC_GDZ_WRITE_COMMON_JPG()

AC_GDZ_WRITE_COMMON_PNG()

AC_GDZ_WRITE_COMMON_MNG()

AC_GDZ_WRITE_COMMON_GIF()

AC_GDZ_WRITE_COMMON_GL()

dnl disabled (files missing)
dnl AC_GDZ_WRITE_COMMON_MYRINET()

AC_GDZ_WRITE_COMMON_FREETYPE1()

AC_GDZ_WRITE_OSG_CONFIG()

if test $build_os = irix6.5; then
    if test "x"$ac_gdz_stl_dir = "x"; then
        AC_GDZ_FIX_SGI_INCLUDES()
    fi
fi

if test $build_os = cygwin; then
	if test $ac_gdz_compiler_base != g++; then
		AC_GDZ_FIX_MS_INCLUDES()
	fi
fi

ac_gdz_package_sys_common_out=common.$build-$ac_gdz_compiler$ac_gdz_suffix.mk

AC_GDZ_WRITE_PACKET_MAKE()

ac_gdz_lib_package_sys_common_out=common.$build-$ac_gdz_compiler$ac_gdz_suffix.mk

AC_GDZ_WRITE_BUILDS_MAKE()

if test "$enable_win_localstorage" = yes; then
    AC_DEFINE(OSG_ASPECT_USE_LOCALSTORAGE)
else
    AC_DEFINE(OSG_ASPECT_USE_DECLSPEC)
fi

if test "$enable_sgi_pthread" = yes; then
    AC_DEFINE(OSG_SGI_USE_PTHREAD)
else
    AC_DEFINE(OSG_SGI_USE_SPROC)
fi

if test "$with_patrol" != no; then
    AC_DEFINE(OSG_USE_MPATROL)
fi

if test "$enable_win_bool_is_unsigned" = yes; then
    AC_DEFINE(OSG_BOOL_IS_UNSIGNED)
fi

case $with_log_level in
	LOG)
		AC_DEFINE(OSG_DEFAULT_LOG_LEVEL, LOG_LOG)
		;;
    FATAL)
		AC_DEFINE(OSG_DEFAULT_LOG_LEVEL, LOG_FATAL)
		;;
    WARNING)
		AC_DEFINE(OSG_DEFAULT_LOG_LEVEL, LOG_WARNING)
		;;
    NOTICE)
		AC_DEFINE(OSG_DEFAULT_LOG_LEVEL, LOG_NOTICE)
		;;
    INFO)
		AC_DEFINE(OSG_DEFAULT_LOG_LEVEL, LOG_INFO)
		;;
    DEBUG)
		AC_DEFINE(OSG_DEFAULT_LOG_LEVEL, LOG_DEBUG)
		;;
	*)
		echo "Unknown log level ($with_log_level), resetting to WARNING"
		AC_DEFINE(OSG_DEFAULT_LOG_LEVEL, LOG_WARNING)
		;;
esac

case $with_log_type in

	NONE) 
		AC_DEFINE(OSG_DEFAULT_LOG_TYPE, LOG_NODE)
		;;
	STDOUT) 
		AC_DEFINE(OSG_DEFAULT_LOG_TYPE, LOG_STDOUT)
		;;
	STDERR) 
		AC_DEFINE(OSG_DEFAULT_LOG_TYPE, LOG_STDERR)
		;;
	*) 
		echo "Unknown log level ($with_log_type), resetting to STDERR"
		AC_DEFINE(OSG_DEFAULT_LOG_TYPE, LOG_STDERR)
		;;
esac


AC_GDZ_WRITE_SYSTEM_COMMON()

case "$build_os" in
    darwin*)
        echo "#############################"
        echo "WARNING"
        echo "#############################"
        echo "This port is highly experimental, currently only the {dbg|opt}Lnk"
        echo "targets are working" 
        echo "In case you are interested in the OSX port"
        echo "please contact me (vossg@camtech.ntu.edu.sg) beforehand"
    ;;
esac

grep '#' config.status | grep configure | grep '\-\-with' | sed -e 's/# //g' > $ac_gdz_commonbin/run_configure
chmod 755 $ac_gdz_commonbin/run_configure
